kubernetes/4_kubernetes_cloudformation/k8s.server.yml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: conf-myeks-app
#   labels:
#     app:
#       myeks-app
# data:
#   SAMPLE_KEY: secretvalue

# ---
# apiVersion: v1
# kind: Secret
# type: Opaque
# metadata:
#   name: sercet-myeks-app
#   labels:
# data:
#   SAMPLE_KEY: secretvalue
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myeks-app
  
spec:
  selector:
    matchLabels:
      app: myeks-app

  template:
    metadata:
      labels:
        app: myeks-app

    spec:
      containers:
        - name: conf-myeks-app
          image: <AWS_ACCOUNT>.dkr.ecr.ap-northeast-2.amazonaws.com/myeks_app_ecr:latest
          args: ["-p 80:80"]
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myeks-app
spec:
  selector:
    app: myeks-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
