kubernetes/4_kubernetes_cloudformation/k8s.nginx.ingress.controller.backup.yml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-node-sample-helloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx

spec:
  selector:
    app: myeks_app_ecr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-node-sample-helloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: svc-myeks-app-ecr
            servicePort: 80
