kubernetes/4_kubernetes_cloudformation/k8s.nginx.ingress.controller.backup_2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
    
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-myeks-app-ecr
              port:
                number: 80
            # serviceName: svc-myeks-app-ecr
            # servicePort: 80
